# typst-analyzer

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.github/: dependabot.yml  run.sh
.github/workflows/: ci.yml  release.yml
crates/tinyerror/: Cargo.toml
crates/tinyerror/src/: lib.rs
crates/typst-analyzer/: Cargo.toml
crates/typst-analyzer-analysis/: Cargo.toml
crates/typst-analyzer-analysis/src/: dict.rs  error.rs  handle.rs  lib.rs  node.rs
crates/typst-analyzer-analysis/src/bib/: handle.rs
crates/typst-analyzer-analysis/src/bibliography/: README.md  mod.rs
crates/typst-analyzer-analysis/src/completion/: code.rs  core.rs  fonts.rs  generic.rs  handle.rs  markup.rs  mod.rs  resources.rs  snippets.rs
crates/typst-analyzer-analysis/src/hints/: handle.rs
crates/typst-analyzer/src/: backend.rs  completion.rs  definition.rs  diagnostics.rs  error_ctx.rs  formating.rs  hints.rs  hover.rs  lib.rs  main.rs  prelude.rs  symbols.rs
crates/typst-analyzer/src/code_actions/: handle.rs  mod.rs
crates/typst-analyzer/src/completion/: generic.rs  handle.rs  markup.rs  mod.rs
crates/typst-analyzer/src/diagnostics/: handle.rs
crates/typst-analyzer/src/hints/: handle.rs
crates/typst-analyzer/src/typst_lang/: README.md  mod.rs  semantic_analysis.rs  span.rs  symbol_table.rs
crates/typst-analyzer/src/workspace/: mod.rs
examples/: bibliography.yml  test.typ
examples/config/: snippets.yml
