[workspace.package]
version = "0.1.11"
license = "GPL-3.0-or-later"
authors = ["Abhinandh S <abhinandhsuby@proton.me>"]
description = "A Language server for Typst."
homepage = "https://github.com/abhi-xyz/typst-analyzer"
documentation = "https://github.com/abhi-xyz/typst-analyzer"
keywords = ["lsp"]

[workspace]
resolver = "2"

members = [
  "crates/*"
 ]

[workspace.dependencies]
anyhow = "1.0.95"
dashmap = "6.1.0"
dirs = "5.0.1"
ecow = "0.2.3"
fontdb = "0.23.0"
itertools = "0.13.0"
oxc_index = "2.0.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_yml = "0.0.12"
regex = "1.11.1"
ropey = "1.6.1"
typst-syntax = "0.12.0"
tinyerror = { path = "./crates/tinyerror" }
typst-analyzer-analysis = { path = "./crates/typst-analyzer-analysis", version = "0.1.10" }
tower-lsp = "0.20.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false

[workspace.lints.rust]
unsafe_code = "forbid"
unused_labels = "allow"
unreachable_pub = "deny"

[workspace.lints.clippy]
perf = "deny"
unwrap_used = "deny"
expect_used = "deny"
or_then_unwrap = "deny"
panicking_unwrap = "deny"
get_unwrap = "deny"
enum_glob_use = "deny"
redundant_closure = "deny"
str_to_string = "deny"
