[package]
name = "typst-analyzer-analysis"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
tower-lsp.workspace = true
regex.workspace = true
dirs.workspace = true
serde.workspace = true
serde_yml.workspace = true

[lints]
workspace = true
