[package]
name = "typst-analyzer-analysis"
edition = "2021"
documentation = "https://docs.rs/typst-analyzer-analysis/latest/typst_analyzer_analysis/"
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
fontdb.workspace = true
hayagriva.workspace = true
itertools.workspace = true
regex.workspace = true
serde.workspace = true
serde_yml.workspace = true
tower-lsp.workspace = true
typst-syntax.workspace = true
walkdir.workspace = true

[lints]
workspace = true
