[package]
name = "typst-analyzer"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
thiserror.workspace = true
dashmap = "6.1.0"
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
tower-lsp = "0.20.0"
tracing-subscriber = "0.3.19"
regex.workspace = true
oxc_index.workspace = true
typst-syntax.workspace = true
typst-analyzer-analysis.workspace = true

[lints]
workspace = true
