[package]
name = "typst-analyzer"
edition = "2021"
documentation = "https://docs.rs/typst-analyzer/latest/typst_analyzer/"
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
dashmap.workspace = true
dirs.workspace = true
ecow.workspace = true
itertools.workspace = true
oxc_index.workspace = true
serde.workspace = true
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
tracing-subscriber.workspace = true 
typst-syntax.workspace = true
typst-analyzer-analysis.workspace = true

[lints]
workspace = true
